force-app/main/default/objects/Certification_Rating__c/fields/Agg__c.field-meta.xml
<CustomField>
    <fullName>Agg__c</fullName>
    <description>Store the action of aggregation i.e count, sum, avg</description>
    <label>Agg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>