force-app/main/default/objects/Certification_Rating__c/fields/API_Identifier_Qual__c.field-meta.xml
<CustomField>
    <fullName>API_Identifier_Qual__c</fullName>
    <description>It is a number that it sent and received back from the API that helps identify the qual rating</description>
    <label>API Identifier - Qual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>