force-app/main/default/objects/Certification_Rating__c/fields/Assessment_type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_type__c</fullName>
    <description>Indicates if the rating is qualitative or quantitative</description>
    <label>Assessment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualitative</fullName>
            </value>
            <value>
                <fullName>Quantitative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>