force-app/main/default/objects/Certification_Rating__c/fields/Calculation_type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_type__c</fullName>
    <description>Indicates how the rating is assessed</description>
    <label>Calculation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y/N</fullName>
            </value>
            <value>
                <fullName>Bucketed</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>