force-app/main/default/objects/Certification_Rating__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Stores the category of the rating</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>