force-app/main/default/objects/Certification_Rating__c/fields/Correlation_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Coefficient__c</fullName>
    <description>Correlation coefficient provided by the model</description>
    <label>Correlation Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>