force-app/main/default/objects/Certification_Rating__c/fields/Custom_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Name__c</fullName>
    <description>This field will be used to store the Field API name for the Custom metric</description>
    <label>Custom Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>