force-app/main/default/objects/Certification_Rating__c/fields/Custom_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object_Name__c</fullName>
    <description>This field will store the API name of the object for Custom Metric.</description>
    <label>Custom Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>