force-app/main/default/objects/Certification_Rating__c/fields/Custom_Related_by__c.field-meta.xml
<CustomField>
    <fullName>Custom_Related_by__c</fullName>
    <description>This field store the field name that will be lookup to the user object</description>
    <label>Custom Related by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>