force-app/main/default/objects/Certification_Rating__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if it a date or datetime used in a dynamic query</description>
    <label>Date</label>
    <type>Checkbox</type>
</CustomField>