force-app/main/default/objects/Certification_Rating__c/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this rating should not appear for the certifications that are created in future</description>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>