force-app/main/default/objects/Certification_Rating__c/fields/Default_Goal__c.field-meta.xml
<CustomField>
    <fullName>Default_Goal__c</fullName>
    <label>Default Goal</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>