force-app/main/default/objects/Certification_Rating__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Stores the order of the rating under a particular category</description>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>