force-app/main/default/objects/Certification_Rating__c/fields/Duration_Field__c.field-meta.xml
<CustomField>
    <fullName>Duration_Field__c</fullName>
    <description>Store the field for the time period used in the query</description>
    <label>Duration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>