force-app/main/default/objects/Certification_Rating__c/fields/Duration_Period__c.field-meta.xml
<CustomField>
    <fullName>Duration_Period__c</fullName>
    <description>Stores the duration for the query</description>
    <label>Duration Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No time period</fullName>
            </value>
            <value>
                <fullName>Current Month</fullName>
            </value>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current Fiscal year</fullName>
            </value>
            <value>
                <fullName>12 Month Rolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>