force-app/main/default/objects/Certification_Rating__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Store the API name for the Quantitative rating</description>
    <label>Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>