force-app/main/default/objects/Certification_Rating__c/fields/Goal_field_name__c.field-meta.xml
<CustomField>
    <fullName>Goal_field_name__c</fullName>
    <description>Stores the API name of the goal for the quantitative metric</description>
    <label>Goal field name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>