force-app/main/default/objects/Certification_Rating__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Stores the importance from the model output.</description>
    <label>Importance coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>