force-app/main/default/objects/Certification_Rating__c/fields/Important_flag__c.field-meta.xml
<CustomField>
    <fullName>Important_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Important or Not Important flag (not important means that there is a statistically insignificant relationship between the FS and the rating).</description>
    <label>Important flag</label>
    <type>Checkbox</type>
</CustomField>