force-app/main/default/objects/Certification_Rating__c/fields/Metric_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Field_Name__c</fullName>
    <description>Name of the field associated with the rating(actual value) and should be sent to the model</description>
    <label>Metric Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>