force-app/main/default/objects/Certification_Rating__c/fields/Numeric_Weight__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Weight__c</fullName>
    <description>Store the Numeric Value of picklist</description>
    <formula>VALUE(TEXT( Weight__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeric Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>