force-app/main/default/objects/Certification_Rating__c/fields/Rating_type__c.field-meta.xml
<CustomField>
    <fullName>Rating_type__c</fullName>
    <description>Store the type of rating of quantitative rating</description>
    <label>Rating type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>