force-app/main/default/objects/Certification_Rating__c/fields/Roles_enabled__c.field-meta.xml
<CustomField>
    <fullName>Roles_enabled__c</fullName>
    <description>Stores the list of sales profile roles for which the certification is active</description>
    <label>Roles enabled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Roles</valueSetName>
    </valueSet>
</CustomField>