force-app/main/default/objects/Certification_Rating__c/fields/SRP_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SRP_Field_Name__c</fullName>
    <description>Store the destination field on SRP object  (used for custom metrics)</description>
    <label>SRP Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>