force-app/main/default/objects/Certification_Rating__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <defaultValue>&quot;Week&quot;</defaultValue>
    <description>The number of days within which the rating should be completed</description>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End of month</fullName>
            </value>
            <value>
                <fullName>End of quarter</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>