force-app/main/default/objects/Certification_Rating__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Stores if the sales rep is new/tenured</description>
    <label>Assign to onboarded reps?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>Tenured</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>