force-app/main/default/objects/Certification_Rating__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <description>Store the where clause</description>
    <label>Where</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>