force-app/main/default/objects/Certification_Rating__c/fields/X0LevelHigh__c.field-meta.xml
<CustomField>
    <fullName>X0LevelHigh__c</fullName>
    <label>0LevelHigh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>