force-app/main/default/objects/Certification_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timing__c</columns>
    <columns>User_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Deactivated__c</columns>
    <columns>Goal_field_name__c</columns>
    <columns>Default_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>