force-app/main/default/objects/Certification_Rating__c/listViews/Quantitative.listView-meta.xml
<ListView>
    <fullName>Quantitative</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Goal_field_name__c</columns>
    <columns>Metric_Field_Name__c</columns>
    <columns>Rating_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_type__c</field>
        <operation>equals</operation>
        <value>Quantitative</value>
    </filters>
    <label>Quantitative</label>
    <language>en_US</language>
</ListView>